[gd_scene load_steps=10 format=3 uid="uid://c2pee1p02e7tm"]

[ext_resource type="Script" uid="uid://dl655633tv0fm" path="res://scripts/both_shops/both_shops.gd" id="1_l4sgr"]
[ext_resource type="PackedScene" uid="uid://cil87xyo2ttrk" path="res://scenes/shop_app.tscn" id="2_i2tc7"]
[ext_resource type="Texture2D" uid="uid://cm3aeep5vsikl" path="res://assets/icons/x.svg" id="3_p30qi"]
[ext_resource type="FontFile" uid="uid://b778cnyygqp4l" path="res://assets/fonts/IBMPlexSans-Regular.ttf" id="4_4dtxp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p30qi"]
bg_color = Color(0.952941, 0.992157, 0.937255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4g878"]
bg_color = Color(0.886043, 0, 0.175524, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i2tc7"]
bg_color = Color(0.90708, 0, 0.179257, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4dtxp"]
bg_color = Color(0.806775, 0.969841, 0.738838, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 30.0
expand_margin_top = 30.0
expand_margin_right = 30.0
expand_margin_bottom = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wkt3l"]
bg_color = Color(0.876126, 0, 0.0768186, 1)

[node name="both_shops" type="Node2D"]
script = ExtResource("1_l4sgr")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 6

[node name="Panel" type="Panel" parent="."]
offset_left = -543.0
offset_top = -1208.0
offset_right = 537.0
offset_bottom = 1192.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p30qi")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 83.0
offset_top = -784.0
offset_right = -69.0
offset_bottom = 1011.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Control" parent="Panel/VBoxContainer" instance=ExtResource("2_i2tc7")]
layout_mode = 2

[node name="Control2" parent="Panel/VBoxContainer" instance=ExtResource("2_i2tc7")]
layout_mode = 2

[node name="Control3" parent="Panel/VBoxContainer" instance=ExtResource("2_i2tc7")]
layout_mode = 2

[node name="Control4" parent="Panel/VBoxContainer" instance=ExtResource("2_i2tc7")]
layout_mode = 2

[node name="Exit_shop" type="Button" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2
anchor_left = 1.0
anchor_top = 0.0245833
anchor_right = 1.43981
anchor_bottom = 0.2225
offset_left = -133.0
offset_right = -133.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.154, 0.154)
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_4g878")
theme_override_styles/normal = SubResource("StyleBoxFlat_i2tc7")
icon = ExtResource("3_p30qi")
flat = true

[node name="search_bar" type="LineEdit" parent="Panel"]
layout_mode = 2
anchor_left = 0.503
anchor_top = 0.109167
anchor_right = 0.503
anchor_bottom = 0.109167
offset_left = -432.24
offset_top = -53.0008
offset_right = 432.76
offset_bottom = 46.9992
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.129412, 0.129412, 0.129412, 1)
theme_override_fonts/font = ExtResource("4_4dtxp")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_4dtxp")

[node name="Uninstall" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.136
anchor_top = 0.913
anchor_right = 0.876
anchor_bottom = 0.969
offset_left = -3.88
offset_top = 4.7998
offset_right = -4.08008
offset_bottom = 3.3999
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_wkt3l")
text = "解除安裝"

[connection signal="pressed" from="Panel/Exit_shop" to="." method="_on_exit_shop_pressed"]
[connection signal="text_changed" from="Panel/search_bar" to="." method="_on_search_bar_text_changed"]
[connection signal="pressed" from="Panel/Uninstall" to="." method="_on_uninstall_pressed"]
